--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Telegram Bot Dependencies
 python-telegram-bot==20.7
 python-dotenv==1.0.0
+python-telegram-bot[job-queue]>=20.0
 
 # MongoDB Dependencies
 motor==3.3.2
